--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
 	--primary-color: #0b66c2;
-	--secondary-color: #ff993b;
+	--secondary-color: #3472b7;
 	--dark-color: #292929;
 	--white-color: #dff3e4;
 }
