--- a/css/site.css
+++ b/css/site.css
@@ -75,3 +75,16 @@ main > .container {
 	bottom: 0;
 	width: 100%;
 }
+
+.Fizz {
+	color: darkgreen;
+}
+
+.Buzz {
+	color: darkblue;
+}
+
+.FizzBuzz {
+	color: red;
+	font-weight: bold;
+}
